# repaso_prueba

./: CMakeLists.txt  escala_grises.cpp  escala_grises.h  main.cpp
